<resources>
    <string name="app_name">RCEF DI</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="change_account">Change account</string>
    <string name="welcome">Welcome</string>
    <string name="season">Season</string>
    <string name="dry">Dry</string>
    <string name="wet">Wet</string>
    <string name="delivery_details">Delivery details</string>
    <string name="hide">hide</string>
    <string name="coop_id">Coop Id</string>
    <string name="coop_accreditation">COOP Accreditation</string>
    <string name="coop_accreditation2">*COOP Accreditation</string>
    <string name="seed_grower_accreditation">Seed Grower Accreditation</string>
    <string name="variety">Variety</string>
    <string name="seed_class">Class</string>
    <string name="variety2">*Variety</string>
    <string name="seed_class2">*Class :</string>
    <string name="weight_per_bag_kg">*Weight per bag(kg)</string>
    <string name="delivery_date">*Delivery date</string>
    <string name="current_location">*Current Location</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="deliver_to">*Deliver To</string>
    <string name="cancel">Cancel</string>
    <string name="tap_to_add_seed_class">Tap to add seed class</string>
    <string name="tap_to_add_seed_variety">Tap to add seed variety</string>
    <string name="image">image</string>
    <string name="seed_tag">seed tag</string>
    <string name="ticket">Ticket # :</string>
    <string name="delivery_date2">Delivery date :</string>
    <string name="delivery_address">Delivery address :</string>
    <string name="status">Status :</string>
    <string name="inspected">Inpsected</string>
    <string name="in_transit">In transit</string>
    <string name="passed">Inpsected - Accepted</string>
    <string name="rejected">Inspected - Rejected</string>
    <string name="pending">Pending Delivery</string>
    <string name="laboratory">*Laboratory #</string>
    <string name="inspection_list">Inspection List</string>
    <string name="lot">*Lot #</string>
    <string name="total_weight_kg">*Total Weight(kg)</string>
    <string name="seed_tag2">Seed Tag :</string>
    <string name="inspect">Inspect</string>
    <string name="confirm_inspection">Confirm Inspection</string>
    <string name="view_details">View Details</string>
    <string name="variety3">Variety :</string>
    <string name="unknown_status">Undefined status</string>
    <string name="title_activity_inspection_sampling">InspectionSamplingActivity</string>
    <string name="sampling_left">Sampling left :</string>
    <string name="sampling_count">Sampling count :</string>
    <string name="seed_tag3">(seed tag)</string>
    <string name="actual_of_bags_delivered_100">Actual # of bags delivered : 100</string>
    <string name="weight">Weight :</string>
    <string name="tag_sequence">Tag sequence :</string>
    <string name="actual_number_of_bags_delivered">Actual number of bags delivered</string>
    <string name="packaging_weight_kg">Package weight(kg) :</string>
    <string name="packaging_weight_kg2">*Package weight(kg)</string>
    <string name="total_weight_kg2">Total weight(kg) :</string>
    <string name="delivery_bag_count">Delivery bag count</string>
    <string name="proceed">Proceed</string>
    <string name="done_sampling">Done Sampling</string>
    <string name="next_bag">Next Bag</string>
    <string name="result_passed">Passed</string>
    <string name="result_failed">Failed</string>
    <string name="remarks">Remarks</string>
    <string name="result">Result</string>
    <string name="visual_inspection">Visual Inspection</string>
    <string name="discoloration">Discoloration</string>
    <string name="rice_straw">Rice Straw</string>
    <string name="unfilled_grains">Unfilled Grains</string>
    <string name="weevil">Weevil</string>
    <string name="significant">Significant</string>
    <string name="insignificant">Insignificant</string>
    <string name="tick_box_the_from_choices_if_significant_during_the_inspection">Tick the box if highly significant during the inspection</string>
    <string name="rice_black_bug">Rice Black Bug</string>
    <string name="take_picture_of_open_bag">Take picture of open bag</string>
    <string name="total_bags_to_deliver3">*# of bags</string>
    <string name="next_lot">Next Lot</string>
    <string name="delivery_list">Delivery List</string>
    <string name="region">*Region</string>
    <string name="province">*Province</string>
    <string name="municipality">*Municipality</string>
    <string name="drop_off_point">*Drop off point</string>
    <string name="batch_ticket_number">Batch ticket number</string>
    <string name="total_bags1">Total bags :</string>
    <string name="dispatched">Dispatched</string>
    <string name="dispatch">Dispatch</string>
    <string name="passed2">Passed</string>
    <string name="reject2">Reject</string>
    <string name="visual_inspection_image">Visual Inspection Image</string>
    <string name="package_sampling">Package Sampling</string>
    <string name="average">Average :</string>
    <string name="weight2">*Weight(kg)</string>
    <string name="actual_delivery">Actual Delivery</string>
    <string name="total_bags4">*Total bags</string>
    <string name="next_variety">Next variety</string>
    <string name="send_inspection_data">Send Inspection Data</string>
    <string name="variety4">Variety :</string>
    <string name="bag_count">Bag count</string>
    <string name="actual_delivery_image">Actual delivery image</string>
    <string name="sampling_image">Sampling image</string>
    <string name="done_inspection">Complete Inspection</string>
    <string name="close">Close</string>
    <string name="x">x</string>
    <string name="seed_tag4">*Seed tag</string>
    <string name="coop_hint_password">*Use the last 5 digit of your cooperative accreditation as password. (eg.03-N-1/20-RcI-#####)</string>
    <string name="series">Series</string>
    <string name="change_ip">Change IP</string>
    <string name="ping_server">Ping server</string>
    <string name="send_local">send local</string>
    <string name="sent_local">SENT LOCAL</string>
    <string name="sent_central">ALREADY INSPECTED DELIVERY</string>
    <string name="download_data">Download data</string>
    <string name="cancel_delivery">Cancel Delivery</string>
    <string name="remaining_volume">Remaining volume :\t</string>
    <string name="seed_grower">*Seed grower</string>
    <string name="batch_ticket">*Batch ticket</string>
    <string name="qr_series">*QR Series</string>
    <string name="rejection_rule"><u>Click here to see how rejection of seeds work (full and partial rejection)</u></string>
    <string name="rejection_rule2">Upon checking the <b>Reject</b> checkbox, you as the seed inspector acknowledges that the selected seedtag (200 bags) will not be accepted and received on any other delivery.

However, if  partial rejection is needed, you can still accept the specified volume of seeds in the seedlot - for example 150 out of 200 bags were still accepted from the delivery and remarks should be provided why some of the bags have been rejected.</string>
    <string-array name="seed_class">
        <item>Certified</item>
        <!--<item>Foundation</item>
        <item>Registered</item>-->
    </string-array>


</resources>
