<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/da_light_yellow"
        android:orientation="vertical"
        android:padding="8dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_batchTicketNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/batch_ticket_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_colorStat"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight=".1"
                    android:background="@color/prri_orange" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/total_bags1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_totalBags"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/variety4"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_variety"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/delivery_date2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_deliveryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/delivery_address"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_deliveryAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/status"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tv_btnDelivered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_btn1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dispatch"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_btn2"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/cancel_delivery"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
