<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/da_light_yellow"
        android:orientation="vertical"
        android:padding="8dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/ticket"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_ticketNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/seed_tag2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_seedTag"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/variety3"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_variety"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="Expected bags :"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_expectedBag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/total_weight_kg2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_totWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/packaging_weight_kg"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_weightPerPack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/delivery_date2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_deliveryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/delivery_address"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_deliveryAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/status"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            </TableRow>


        </TableLayout>

        <TextView
            android:id="@+id/tv_inspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@color/da_green"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/inspect"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_confirmView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_confirmInspection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/da_green"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/confirm_inspection"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_viewDetails"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/da_green"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/view_details"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>
