<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/da_light_yellow"
    android:onClick="removefocus"
    android:orientation="vertical"
    tools:context=".userLogin.VerifyLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/da_green"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:onClick="change_account"
                    android:text="@string/change_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/blue" />


            </LinearLayout>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="175dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/rcef_logo" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:hint="@string/username"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_coopPassHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/coop_hint_password"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:hint="@string/password"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|text"
                    android:padding="16dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--<EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />-->

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_btn1"
                android:gravity="center"
                android:onClick="login"
                android:padding="8dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/da_green"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/da_green"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
